--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,126 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.back-button-container {
+  font-size: 12px;
+  font-weight: 600;
+  margin-bottom: 60px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.back-button {
+  margin-right: 10px;
+  height: 20px;
+  width: 20px;
+}
+
+@media (max-width: 480px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+    margin: 30px 50px;
+  }
+}
+
+@media (min-width: 480px) {
+  .container {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 30px 50px;
+  }
+
+  .App {
+    width: 49%;
+    border-right: 0.01px solid rgb(210,210,210);
+  }
+}
+
+
+
+.header {
+  margin-top: 20px;
+  margin-bottom: 50px;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.header-main{
+  font-size: 30px;
+  font-weight: 600;
+  color:rgb(70,70,70);
+  margin-bottom: 5px;
+}
+
+.header-sub{
+  font-size: 14px;
+  color:rgb(210,210,210);
+}
+
+.tab{
+  font-size: 14px;
+  background-color: transparent;
+  border:none;
+  font-weight: 600;
+  margin-right:20px;
+  color:rgb(210,210,210);
+  padding-bottom: 10px;
+  cursor: pointer;
+}
+
+.active {
+  color:rgb(70,70,70);
+  border-bottom: 5px solid rgb(63, 135, 245);
+}
+
+.content {
+  margin-top: 30px;
+  font-size: 13px;
+  color:rgb(127,127,127);
+  margin-bottom: 40px;
+  font-weight: 500;
+}
+
+.price {
+  font-size: 30px;
+  font-weight: 600;
+  margin-bottom: 60px;
+}
+
+.price-new {
+  margin-right: 20px;
+}
+
+.price-old {
+  color:rgb(210,210,210);
+}
+
+.colors-label {
+  font-size: 12px;
+  font-weight: 700;
+  margin-bottom: 5px;
+}
+.dropdown {
+  width: 150px;
+}
+.divider {
+  margin: 20px 0 20px 0;
+  border-bottom: 1px solid rgb(210,210,210);
+}
+
+.cta {
+  padding: 10px 40px;
+  background-color:rgb(63, 135, 245);
   color: white;
+  border-color: transparent;
+  border-radius: 5px;
 }
 
-.App-link {
-  color: #61dafb;
+.image-container{
+  width: 50%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.preview {
+  width: 100%;
+  height: 100%;
 }
